# nats-semaphore

./: README.md  compose.yaml  pyproject.toml
.github/workflows/: publish.yml  python-package.yml  test.yml
src/nats_semaphore/: __init__.py
tests/: conftest.py  test_sanity.py  test_semaphore.py
