[project]
name = "nats-semaphore"
version = "0.0.1"
description = "Distributed semaphore utility based on NATS JetStream key-value stores."
authors = [
    {name = "Mikołaj Nowak", email = "12396461+m3nowak@users.noreply.github.com"},
]
dependencies = ["nats-py<3,>=2.12", "async-timeout>=5.0.1; python_version < '3.11'"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["nats", "semaphore", "distributed", "concurrency", "asyncio", "jetstream"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/m3nowak/nats-semaphore"
Repository = "https://github.com/m3nowak/nats-semaphore"
Issues = "https://github.com/m3nowak/nats-semaphore/issues"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]
fixable = ["ALL"]


[tool.pyright]
exclude = [
  "**/__pycache__",
]
include = ["src", "tests"]
pythonPlatform = "Linux"
pythonVersion = "3.10"
reportMissingImports = "error"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
format = "ruff format"
lint-fix = "ruff check --fix"
fix-all = {composite = ["lint-fix", "format"], keep_going = true}
types = "pyright src tests"
test = "pytest tests"

[dependency-groups]
dev = [
    "ruff>=0.14.6",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "testcontainers[nats]>=4.13.3",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:::testcontainers.*",
]

